--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"gsap": "^3.5.1",
 		"helmet": "^4.6.0",
 		"https": "^1.0.0",
+		"https-browserify": "^1.0.0",
 		"instantsearch.js": "^3.6.0",
 		"isomorphic-fetch": "^3.0.0",
 		"js-cookie": "^2.2.1",
