--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
 		"@storybook/vue": "^6.1.14",
 		"@vue/test-utils": "^1.0.0-beta.29",
 		"app-manifest-loader": "^2.4.1",
-		"autoprefixer": "^9.8.6",
+		"autoprefixer": "^10.2.5",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-jest": "^23.4.2",
 		"babel-loader": "^8.1.0",
@@ -149,10 +149,9 @@
 		"chalk": "^4.0.0",
 		"chokidar": "^3.4.2",
 		"coveralls": "^3.1.0",
-		"css-loader": "^3.6.0",
-		"cssnano": "^4.1.10",
+		"css-loader": "^5.2.6",
+		"cssnano": "^5.0.4",
 		"cypress": "^4.12.1",
-		"dart-sass": "^1.25.0",
 		"eslint": "^7.5.0",
 		"eslint-config-airbnb-base": "^14.2.0",
 		"eslint-import-resolver-webpack": "^0.12.2",
@@ -175,10 +174,11 @@
 		"jest-transform-graphql": "^2.1.0",
 		"memory-fs": "^0.5.0",
 		"ora": "^4.0.2",
-		"postcss": "^7.0.35",
-		"postcss-loader": "^3.0.0",
+		"postcss": "^8.3.0",
+		"postcss-loader": "^4.3.0",
 		"rimraf": "^3.0.2",
-		"sass-loader": "^8.0.2",
+		"sass": "^1.32.13",
+		"sass-loader": "^10.2.0",
 		"semver": "^7.3.2",
 		"shelljs": "^0.8.4",
 		"storybook-vue-router": "^1.0.7",
