--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
 		"serialize-javascript": "^5.0.1",
 		"set-cookie-parser": "^2.4.6",
 		"store2": "^2.12.0",
+		"tailwindcss": "^2.1.2",
 		"timesync": "^1.0.8",
 		"title-case": "^3.0.2",
 		"uuid": "^8.3.0",
