Skip auto detection and compact this file

--- a/.babelrc
+++ b/.babelrc
@@ -25,6 +25,10 @@
 			}
 		]
 	],
+	"overrides": [{
+		"test": "./src/lib/globekit/globekit.esm.js",
+		"compact": true
+	}],
 	"env": {
 		"test": {
 			"presets": [
