--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"docker-dev-vm": "rimraf node_modules/.cache/hard-source && cross-env NODE_ENV=development node server/dev-server.js",
 		"inspect-dev": "cross-env NODE_ENV=development node --inspect --max-old-space-size=4096 server/dev-server.js",
 		"inspect": "cross-env NODE_ENV=production node --inspect --max-old-space-size=4096 server/index.js",
-		"build": "rimraf dist && node build/build.js",
-		"build:cypress": "rimraf dist && node build/build.cypress.js",
+		"build": "rimraf dist && node --max-old-space-size=4096 build/build.js",
+		"build:cypress": "rimraf dist && node --max-old-space-size=4096 build/build.cypress.js",
 		"build:trace": "rimraf dist && node --trace-deprecation build/build.js",
 		"build:all": "rimraf dist && npm run build:client && npm run build:server",
 		"build:client": "rimraf dist/static && webpack --config build/webpack.client.prod.conf.js --progress --hide-modules",
