Update webpack-cli and any cli usage of webpack to use new params and flags.

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"build": "rimraf dist && node --max-old-space-size=4096 build/build.js",
 		"build:cypress": "rimraf dist && node --max-old-space-size=4096 build/build.cypress.js",
 		"build:report": "rimraf dist/client-bundle-stats.json && rimraf dist/static && node --max-old-space-size=4096 build/build.report.js",
-		"build:report-webpack": "webpack --config build/webpack.client.report.conf.js --progress --profile",
+		"build:report-webpack": "webpack --config build/webpack.client.report.conf.js --progress=profile",
 		"build:trace": "rimraf dist && node --trace-deprecation build/build.js",
 		"build:all": "rimraf dist && npm run build:client && npm run build:server",
-		"build:client": "rimraf dist/static && webpack --config build/webpack.client.prod.conf.js --progress --hide-modules",
-		"build:server": "webpack --config build/webpack.server.conf.js --progress --hide-modules",
+		"build:client": "rimraf dist/static && webpack --config build/webpack.client.prod.conf.js --progress --stats=minimal",
+		"build:server": "webpack --node-env=production --config build/webpack.server.conf.js --progress --stats=detailed",
 		"destroyBuildCache": "rimraf node_modules/.cache/hard-source",
 		"e2e:dev": "cypress open --config baseUrl=http://localhost:8888",
 		"e2e:headless": "cypress run --config baseUrl=http://localhost:8888",
@@ -199,7 +199,7 @@
 		"wait-on": "^5.2.0",
 		"webpack": "^4.44.2",
 		"webpack-bundle-analyzer": "^4.4.0",
-		"webpack-cli": "^3.3.12",
+		"webpack-cli": "^4.7.0",
 		"webpack-dev-middleware": "^3.7.1",
 		"webpack-filter-warnings-plugin": "^1.2.1",
 		"webpack-hot-middleware": "^2.25.0",
