--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
 		"jest-serializer-vue": "^2.0.2",
 		"jest-transform-graphql": "^2.1.0",
 		"memory-fs": "^0.5.0",
+		"mini-css-extract-plugin": "^1.6.2",
 		"ora": "^4.0.2",
 		"postcss": "^8.3.0",
 		"postcss-loader": "^4.3.0",
