--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -21,10 +21,23 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '15.x'
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-dependencies
+      with:
+        path: |
+          ~/.cache
+          ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
     - name: Update NPM to v7
       run: npm install -g npm@latest
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --prefer-offline
     - name: Run Lint
       run: npm run lint
     - name: Run Unit Tests
