--- a/package.json
+++ b/package.json
@@ -189,7 +189,7 @@
 		"stylelint": "^13.7.0",
 		"stylelint-config-standard": "^20.0.0",
 		"stylelint-scss": "^3.18.0",
-		"tailwindcss": "^2.2.4",
+		"tailwindcss": "2.2.4",
 		"thread-loader": "^2.1.3",
 		"url-loader": "^4.1.1",
 		"vue-jest": "^3.0.7",
