Update ingress configs for all environments

--- a/deploy/prod/values.yaml
+++ b/deploy/prod/values.yaml
@@ -43,10 +43,13 @@ ingress:
       - host: "ui.k1.kiva.org"
         http:
           paths:
-          - backend:
-              serviceName: "kiva-ui"
-              servicePort: *servicePortName
-            path: /
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: "kiva-ui"
+                port:
+                  name: *servicePortName
   tls:
     - hosts:
       - ui.k1.kiva.org
