--- a/deploy/charts/templates/autoscale.yaml
+++ b/deploy/charts/templates/autoscale.yaml
@@ -9,6 +9,9 @@ metadata:
     helm.sh/chart: {{ include "ui-helm.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
