--- a/deploy/charts/templates/configmap.yaml
+++ b/deploy/charts/templates/configmap.yaml
@@ -8,6 +8,9 @@ metadata:
     helm.sh/chart: {{ include "ui-helm.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 data:
   {{- range .Values.configmap.all }}
     {{ .key }}: "{{ .value }}"
