--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@babel/polyfill": "^7.10.4",
 		"@babel/runtime": "^7.12.5",
 		"@contentful/rich-text-html-renderer": "^14.1.1",
+		"@contentful/rich-text-types": "^14.1.2",
 		"@godaddy/terminus": "^4.4.1",
 		"@graphql-tools/load": "^6.2.4",
 		"@graphql-tools/url-loader": "^6.3.0",
