build: ignore dependabot updates for vue-svg-loader since latest versions don't seem to play well without commonjs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,6 @@ updates:
   - dependency-name: vue-instantsearch
     versions:
     - ">= 2.7.a"
+  - dependency-name: vue-svg-loader
+    versions:
+    - ">= 0.15.0"    
