--- a/package.json
+++ b/package.json
@@ -143,6 +143,8 @@
 		"@storybook/addons": "^6.3.2",
 		"@storybook/storybook-deployer": "^2.8.10",
 		"@storybook/vue": "^6.3.2",
+		"@testing-library/user-event": "^13.2.1",
+		"@testing-library/vue": "^5.8.2",
 		"@vue/test-utils": "^1.0.0-beta.29",
 		"app-manifest-loader": "^2.4.1",
 		"autoprefixer": "^10.2.5",
