--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development node server/dev-server.js",
+		"dev": "cross-env NODE_ENV=development TAILWIND_MODE=watch node server/dev-server.js",
 		"start": "cross-env NODE_ENV=production node --max-old-space-size=2048 server/index.js",
 		"start-k8s": "cross-env NODE_ENV=production node --max-old-space-size=1536 server/index.js",
 		"docker-dev-vm": "rimraf node_modules/.cache/hard-source && cross-env NODE_ENV=development node server/dev-server.js",
