--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
 		"@storybook/addon-essentials": "^6.3.2",
 		"@storybook/addon-knobs": "^6.2.9",
 		"@storybook/addon-links": "^6.3.2",
+		"@storybook/addon-postcss": "^2.0.0",
 		"@storybook/addon-storysource": "^6.3.2",
 		"@storybook/addons": "^6.3.2",
 		"@storybook/storybook-deployer": "^2.8.10",
