--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
 		"@kiva/kv-components": "^0.22.3",
 		"@kiva/kv-tokens": "^0.14.1",
 		"@mdi/js": "^5.9.55",
-		"@sentry/browser": "^5.21.1",
-		"@sentry/integrations": "^5.27.1",
+		"@sentry/tracing": "^6.13.3",
+		"@sentry/vue": "^6.13.3",
 		"algoliasearch": "^3.34.0",
 		"apollo-cache-inmemory": "^1.6.6",
 		"apollo-client": "2.6.10",
