chore(cypress): generate junit report from cypress test results VUE-720

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dist/
 npm-debug.log*
 coverage/
 test/e2e/screenshots
+test/e2e/results
 server/available-routes.json
 build/schema.graphql
 .nyc_output/
