--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
 		"css-loader": "^5.2.6",
 		"cssnano": "^5.0.8",
 		"cypress": "^8.2.0",
+		"cypress-multi-reporters": "^1.5.0",
 		"eslint": "^7.5.0",
 		"eslint-config-airbnb-base": "^14.2.0",
 		"eslint-import-resolver-webpack": "^0.13.1",
@@ -182,8 +183,10 @@
 		"jest": "^27.2.0",
 		"jest-serializer-vue": "^2.0.2",
 		"jest-transform-graphql": "^2.1.0",
+		"junit-report-merger": "^3.0.2",
 		"memory-fs": "^0.5.0",
 		"mini-css-extract-plugin": "^1.6.2",
+		"mocha-junit-reporter": "^2.0.2",
 		"ora": "^4.0.2",
 		"postcss": "^8.3.0",
 		"postcss-loader": "^4.3.0",
