--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
 		"@storybook/addons": "^6.3.2",
 		"@storybook/storybook-deployer": "^2.8.10",
 		"@storybook/vue": "^6.3.2",
+		"@testing-library/cypress": "^8.0.1",
 		"@testing-library/user-event": "^13.2.1",
 		"@testing-library/vue": "^5.8.2",
 		"app-manifest-loader": "^2.4.1",
