--- a/package.json
+++ b/package.json
@@ -135,6 +135,8 @@
 		"@babel/plugin-transform-modules-commonjs": "^7.10.1",
 		"@babel/plugin-transform-runtime": "^7.11.5",
 		"@babel/preset-env": "^7.10.1",
+		"@commitlint/cli": "^14.1.0",
+		"@commitlint/config-conventional": "^14.1.0",
 		"@storybook/addon-a11y": "^6.3.2",
 		"@storybook/addon-essentials": "^6.3.2",
 		"@storybook/addon-knobs": "^6.2.9",
