feat: use `main` as default branch

--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -3,12 +3,12 @@ name: Ui Tests
 on:
   push:
     branches:
-      - master
-      - 'release-*'
+      - main
+      - next
   pull_request:
     branches:
-      - master
-      - 'release-*'
+      - main
+      - next
 
 jobs:
   build:
