--- a/package.json
+++ b/package.json
@@ -137,15 +137,15 @@
 		"@babel/preset-env": "^7.10.1",
 		"@commitlint/cli": "^14.1.0",
 		"@commitlint/config-conventional": "^14.1.0",
-		"@storybook/addon-a11y": "^6.3.12",
-		"@storybook/addon-essentials": "^6.3.12",
+		"@storybook/addon-a11y": "^6.4.9",
+		"@storybook/addon-essentials": "^6.4.9",
 		"@storybook/addon-knobs": "^6.3.1",
-		"@storybook/addon-links": "^6.3.12",
+		"@storybook/addon-links": "^6.4.9",
 		"@storybook/addon-postcss": "^2.0.0",
-		"@storybook/addon-storysource": "^6.3.12",
-		"@storybook/addons": "^6.3.12",
+		"@storybook/addon-storysource": "^6.4.9",
+		"@storybook/addons": "^6.4.9",
 		"@storybook/storybook-deployer": "^2.8.10",
-		"@storybook/vue": "^6.3.12",
+		"@storybook/vue": "^6.4.9",
 		"@testing-library/cypress": "^8.0.1",
 		"@testing-library/user-event": "^13.2.1",
 		"@testing-library/vue": "^5.8.2",
@@ -168,6 +168,7 @@
 		"eslint-plugin-cypress": "^2.11.2",
 		"eslint-plugin-graphql": "^4.0.0",
 		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-storybook": "^0.5.3",
 		"eslint-plugin-vue": "^7.7.0",
 		"file-loader": "^6.1.1",
 		"friendly-errors-webpack-plugin": "^1.7.0",
