--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
 		"@testing-library/user-event": "^13.2.1",
 		"@testing-library/vue": "^5.8.2",
 		"app-manifest-loader": "^2.4.1",
-		"autoprefixer": "^10.2.5",
+		"autoprefixer": "^10.4.2",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-jest": "^23.4.2",
 		"babel-loader": "^8.1.0",
@@ -188,7 +188,7 @@
 		"mini-css-extract-plugin": "^1.6.2",
 		"mocha-junit-reporter": "^2.0.2",
 		"ora": "^4.0.2",
-		"postcss": "^8.3.0",
+		"postcss": "^8.4.6",
 		"postcss-loader": "^4.3.0",
 		"rimraf": "^3.0.2",
 		"sass": "^1.32.13",
@@ -199,7 +199,7 @@
 		"stylelint": "^13.7.0",
 		"stylelint-config-standard": "^20.0.0",
 		"stylelint-scss": "^3.20.1",
-		"tailwindcss": "2.2.15",
+		"tailwindcss": "^3.0.18",
 		"thread-loader": "^2.1.3",
 		"url-loader": "^4.1.1",
 		"vue-jest": "^3.0.7",
