--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"build:server": "webpack --node-env=production --config build/webpack.server.conf.js --progress --stats=detailed",
 		"destroyBuildCache": "rimraf node_modules/.cache/hard-source",
 		"e2e:dev": "cypress open --config baseUrl=https://dev-vm-01.kiva.org",
-		"e2e:headless": "cypress run --config baseUrl=https://dev-vm-01.kiva.org",
+		"e2e:headless": "cypress run --config baseUrl=http://localhost:8888",
 		"fetchSchema": "node build/fetch-schema.js && wait-on build/schema.graphql",
 		"report": "webpack-bundle-analyzer dist/client-bundle-stats.json",
 		"unit": "jest --config test/unit/jest.conf.js --coverage",
@@ -98,8 +98,6 @@
 		"locale": "^0.1.0",
 		"lodash": "^4.17.20",
 		"lru-cache": "^6.0.0",
-		"lunar-core": "^1.0.0",
-		"lunar-express": "0.0.3",
 		"memcached": "^2.2.2",
 		"memjs": "^1.2.2",
 		"minimist": "^1.2.5",
@@ -186,6 +184,8 @@
 		"jest-serializer-vue": "^2.0.2",
 		"jest-transform-graphql": "^2.1.0",
 		"junit-report-merger": "^3.0.2",
+		"lunar-core": "^1.0.0",
+		"lunar-express": "^0.0.3",
 		"memory-fs": "^0.5.0",
 		"mini-css-extract-plugin": "^1.6.2",
 		"mocha-junit-reporter": "^2.0.2",
