--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '15.x'
+        node-version: '16.x'
     - name: Cache dependencies
       uses: actions/cache@v2
       env:
@@ -37,7 +37,7 @@ jobs:
     - name: Update NPM to v7
       run: npm install -g npm@latest
     - name: Install dependencies
-      run: npm ci --prefer-offline
+      run: npm ci --prefer-offline --legacy-peer-deps
     - name: Run Lint
       run: npm run lint
     - name: Run Unit Tests
