--- a/.github/workflows/run-ui-tests.yml
+++ b/.github/workflows/run-ui-tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '15.x'
+        node-version: '16.x'
     - name: Cache dependencies
       uses: actions/cache@v2
       env:
@@ -35,7 +35,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Update NPM to v7
-      run: npm install -g npm@latest
+      run: npm install -g npm@7
     - name: Install dependencies
       run: npm ci --prefer-offline
     - name: Run Lint
