--- a/.github/workflows/storybook-to-gh-pages.yml
+++ b/.github/workflows/storybook-to-gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '15.x'
+          node-version: '16.x'
       - name: Cache dependencies
         uses: actions/cache@v2
         env:
@@ -34,7 +34,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - run: npm install -g npm@latest
+      - run: npm install -g npm@7
       - run: npm ci --prefer-offline
       - run: npm run deploy-storybook -- --ci --script=build-storybook
         env:
