--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
 		"memory-fs": "^0.5.0",
 		"mini-css-extract-plugin": "^1.6.2",
 		"mocha-junit-reporter": "^2.0.2",
+		"mock-apollo-client": "^0.7.0",
 		"ora": "^4.0.2",
 		"postcss": "^8.4.6",
 		"postcss-loader": "^4.3.0",
