feat: datadog unified service tagging & profiling, and limit node max old space

--- a/deploy/charts/values.yaml
+++ b/deploy/charts/values.yaml
@@ -87,4 +87,8 @@ configmap:
     value: 8126
   - key: DD_SERVICE_NAME
     value: "kiva-ui"
-
+  - key: DD_SERVICE
+    value: "kiva-ui"
+  - key: DD_VERSION
+    value: |-
+      {{ .Values.image.tag }}
