--- a/deploy/dev/values.yaml
+++ b/deploy/dev/values.yaml
@@ -59,5 +59,9 @@ configmap:
   data:
   - key: DD_TRACE_GLOBAL_TAGS
     value: "env:dev,app:kiva-ui"
+  - key: DD_PROFILING_ENABLED
+    value: true
   - key: DD_ENV
     value: "dev"
+  - key: NODE_OPTIONS
+    value: "--max-old-space-size=460"
