fix: move version tag to template file

--- a/deploy/charts/templates/deployment.yaml
+++ b/deploy/charts/templates/deployment.yaml
@@ -38,6 +38,9 @@ spec:
         ports:
           - name: {{ .Values.service.portName }}
             containerPort: {{ .Values.service.port }}
+        env:
+          - name: DD_VERSION
+            value: {{ .Values.image.tag }}
         envFrom:
           - secretRef:
               name: {{ .Values.secretName }}
