chore(deps): install deePool

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"cross-env": "^7.0.2",
 		"date-fns": "^2.16.1",
 		"dd-trace": "^0.22.0",
+		"deepool": "^3.0.0",
 		"dompurify": "^2.2.6",
 		"dotenv": "^8.1.0",
 		"embla-carousel": "^4.0.6",
