--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"deploy-storybook": "storybook-to-ghpages"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.6.9",
 		"@babel/eslint-parser": "^7.18.2",
 		"@babel/polyfill": "^7.10.4",
 		"@babel/runtime": "^7.12.5",
@@ -55,10 +56,6 @@
 		"@sentry/vue": "^6.19.6",
 		"@vue/composition-api": "^1.4.6",
 		"algoliasearch": "^3.34.0",
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "2.6.10",
-		"apollo-link": "^1.2.14",
-		"apollo-link-batch-http": "^1.2.14",
 		"apollo-link-context": "^1.0.20",
 		"apollo-link-error": "^1.1.13",
 		"apollo-server-express": "^2.18.2",
